<resources>
    <string name="app_name">VVMExam</string>
    <string name="vvm_title">Vidyarthi Vigyan Manthan \n 2018-19</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_title">Select your state and city</string>
    <string name="personal_info">Set your profile photo</string>
    <string name="exam_location">Select preferred exam location</string>
    <string name="exam_language">Select preferred exam language</string>
    <string name="contact">For more details contact our State Coordinators</string>
    <string name="mobile_varification">Enter mobile number and set login password</string>
    <string name="required_mobile">Mobile number required for receiving OTP</string>
    <string name="note">Login credentials will be sent on registered mobile number after successfull registration</string>

    <string name="no_internet">Server not reachable at this moment.\n Please check your internet connection or try again later</string>
    <string name="tnc">I accept <i><font color='red'>Terms and Conditions</font></i> </string>

    <string name="terms_conditions">Date for the examination will be pre-selected and students will not be allowed to make any further changes in the same. For individually registered student examination date will be 25th November 2018. Student will have to come with his/her own device with good internet connectivity on the day and date mentioned against his/her centre. Centre might/might not be able to provide the devices for all the students as its main focus will be to provide venue for conduct in the exam. Please make sure your school name and address is correct as it will be considered for final evaluation.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>
    <string name="title_other">Other</string>

    <string name="title_activity_fullscreen_exam">FullscreenExamActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="update_app">A new version of VVM Exam app is available on playstore.
        Please update the app now to avail the latest features and to proceed further.</string>
    <string name="profile_photo_warning">Profile photo already set.Can not update.</string>


</resources>